SECURITY: Complete credential cleanup and security hardening
✅ FIXED ALL HARDCODED CREDENTIALS:
- Linear JavaScript files now use environment variables
- N8N scripts converted to environment variables
- GitHub workflow security improved
- Test scripts use proper environment variables

✅ REPOSITORY CLEANUP:
- Consolidated to single security-audit.sh script
- Removed duplicate security scripts
- Updated README with security practices
- Comprehensive .env documentation

✅ SECURITY FEATURES:
- Zero hardcoded API keys in codebase
- All credentials via environment variables
- Regular security audit script
- Improved .gitignore protection

✅ BOUNTY COMPLETE: All vulnerabilities resolved

--- a/.github/workflows/n8n-sync.yml
+++ b/.github/workflows/n8n-sync.yml
@@ -33,10 +33,11 @@ jobs:
       - name: Setup jq
         run: sudo apt-get update && sudo apt-get install -y jq
       
-      - name: Create API key file
+      - name: Setup environment
         run: |
-          mkdir -p n8n/credentials
-          echo "$N8N_API_KEY" > n8n/credentials/api_key.txt
+          # Export environment variables for scripts
+          echo "N8N_API_KEY=$N8N_API_KEY" >> $GITHUB_ENV
+          echo "N8N_API_URL=$N8N_API_URL" >> $GITHUB_ENV
       
       - name: Make scripts executable
         run: |
